--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Game Show Who's Millionaire</title>
-</head>
-<body>
 
+</head>
+<body onload="init();">
+<script src="main.js"></script>
 <script>
 
 </script>
-<script src="main.js"></script>
+
 
 </body>
 </html>
