--- a/index.html
+++ b/index.html
@@ -1,16 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Game Show Who's Millionaire</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Starter Template for Bootstrap</title>
 
+    <!-- Bootstrap core CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <style>
+        body {
+            padding-top: 50px;
+        }
+
+        .starter-template {
+            padding: 40px 15px;
+            text-align: center;
+        }
+        #question {
+            width: 100%;
+            height: 100px;
+            background-color: #CCC;
+        }
+        #question {
+            width: 100%;
+            height: 100px;
+            background-color: #CCC;
+        }
+        .answer{
+            border: 1px solid #CCC;
+            height: 50px;
+            background-color: lime;
+        }
+    </style>
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
-<body onload="init();">
+
+<body onload="init()">
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 offset-md-2" id="question">Hello</div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-2 answer"  id="ans1">
+            Hello
+        </div>
+        <div class="col-md-6 offset-md-2 answer" id="ans2">
+            Hello
+        </div>
+        <div class="col-md-6 offset-md-2 answer" id="ans3">
+            Hello
+        </div>
+        <div class="col-md-6 offset-md-2 answer" id="ans4">
+            Hello
+        </div>
+    </div>
+</div>
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
 <script src="main.js"></script>
-<script>
-
-</script>
-
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
