--- a/index.html
+++ b/index.html
@@ -28,14 +28,20 @@
         }
         #question {
             width: 100%;
+
             height: 100px;
-            background-color: #CCC;
+            background: #8734f7;
+            -webkit-transform: skew(30deg);
+            -moz-transform: skew(30deg);
+            -o-transform: skew(30deg);
+            transform: skew(30deg);
         }
         .answer{
             border: 1px solid #CCC;
             height: 50px;
             background-color: lime;
         }
+
     </style>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -64,6 +70,12 @@
         </div>
         <div class="col-md-6 offset-md-2 answer" id="ans4">
             Hello
+        </div>
+        <div class="col-md-6 offset-md-2 answer" id="point">
+
+        </div>
+        <div class="col-md-6 offset-md-2 answer" id="level">
+
         </div>
     </div>
 </div>
