--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title Page</title>
+    <title>Game Show Ai La Trieu Phu</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -17,11 +17,10 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<title>WWTBAM by Andy Crush</title>
 
-<h1><img src="image.jpg" alt="Logo" width="100px" height="100px"></h1>
+<h1><img src="image.png" alt="Logo" width="200" height="200"></h1>
 
-<h1>Who wants to be a millionaire</h1>
+<h1>Ai Là Triệu Phú ?</h1>
 
 <body onload="init()">
 <div id="each-question" class="row">
