--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </table>
     <div class="form-group" id="board-button">
         <button class="btn btn-info" id="submit-answer">Tôi chắc chắn</button>
-        <button class="btn btn-default" id="withdraw-button">Dừng cuộc chơi</button>
+        <button class="btn btn-warning" id="withdraw-button">Dừng cuộc chơi</button>
         <button class="btn btn-info" id="help5050-button">50 : 50</button>
         <button class="btn btn-primary" id="helpSurvey-button">Hỏi khán giả</button>
     </div>
@@ -67,14 +67,14 @@
     </div>
     <div class="raw" id="reward"></div>
     <div class="raw" id="point"></div>
-    <div class="raw" id="survey-region">
+    <!--<div class="raw" id="survey-region">
         <div class="surveyBoard">
             <div class="raw" id="chartA"></div>
             <div class="raw" id="chartB"></div>
             <div class="raw" id="chartC"></div>
             <div class="raw" id="chartD"></div>
         </div>
-    </div>
+    </div>-->
 </div>
 
 
