--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <div class="form-group" id="board-button">
         <button class="btn btn-info" id="submit-answer">Tôi chắc chắn</button>
         <button class="btn btn-warning" id="withdraw-button">Dừng cuộc chơi</button>
+        <button class="btn btn-warning" id="time"></button>
+
         <button class="btn btn-info" id="help5050-button">50 : 50</button>
         <button class="btn btn-primary" id="helpSurvey-button">Hỏi khán giả</button>
     </div>
