--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
         <button class="btn btn-info" id="help5050-button">50 : 50</button>
         <button class="btn btn-primary" id="helpSurvey-button">Hỏi khán giả</button>
     </div>
+    <div class="clearfix">
+    </div>
     <div class="form-group" id="result-button">
         <button class="btn btn-success" id="next-question">Câu tiếp theo</button>
         <button class="btn btn-danger" id="restart-game">Chơi lại</button>
@@ -69,14 +71,14 @@
     </div>
     <div class="raw" id="reward"></div>
     <div class="raw" id="point"></div>
-    <!--<div class="raw" id="survey-region">
+    <div class="raw" id="survey-region">
         <div class="surveyBoard">
             <div class="raw" id="chartA"></div>
             <div class="raw" id="chartB"></div>
             <div class="raw" id="chartC"></div>
             <div class="raw" id="chartD"></div>
         </div>
-    </div>-->
+    </div>
 </div>
 
 
